# mds_bd

./: .gitignore  README.md  make_reports.ipynb  pyproject.toml
notebooks/: 01_make_reports.ipynb  02_check.ipynb  02_correct_data.ipynb  03_check_upload.ipynb  04_Q&A.ipynb  04_exec_plan.ipynb  05_Q&A.ipynb  06_Q&A_materialized_view.ipynb
query/: create_table_application.sql  create_table_application_test.sql  create_table_application_train.sql  create_table_bureau.sql  create_table_bureau_balance.sql  create_table_credit_card_balance.sql  create_table_installments_payments.sql  create_table_pos_cash_balance.sql  create_table_previous_application.sql  query_check.sql  upload_table_credit_card_balance.sql  upload_table_installments_payments.sql  upload_table_pos_cash_balance.sql  upload_table_previous_application.sql
