[project]
name = "mds-bd"
version = "0.1.0"
description = ""
authors = [
    {name = "none"}
]
readme = "README.md"
requires-python = ">=3.9,<3.13"
#requires-python = ">=3.9"
dependencies = [
    "scikit-learn (>=1.6.1,<2.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "ydata-profiling (>=4.16.1,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
